<resources>
    <string name="app_name" translatable="false">WMM</string>
    <string name="add_fragment_title">New transaction</string>
    <string name="list_title_list">Movements</string>
    <string name="home_fragment_title">Home</string>

    <string name="expense_name_hint">Name</string>
    <string name="expense_quantity_hint">Amount</string>
    <string name="expense_description_hint">Description (Optional)</string>
    <string name="expense_date_hint">Date</string>
    <string name="expense_type_text">Transaction\'s type</string>
    <string name="expense_category_hint">Category</string>
    <string name="button_add_text">Add</string>
    <string name="obligatory_error_text">Obligatory</string>
    <string name="not_0_error_text">More than 0</string>
    <string name="select_date_text">Select a date</string>
    <string name="expense_check_text">Expense</string>
    <string name="income_check_text">Income</string>
    <string name="transaction_added_success">Transaction saved successfully</string>
    <string name="all_transactions_title">All</string>
    <string name="year_transactions_title">Year</string>
    <string name="this_week_transactions_title">Week</string>
    <string name="this_month_transactions_title">Month</string>
    <string name="total_resume_title">Final result</string>
    <string name="total_resume_result_text">Remainder</string>

    <string name="month_name_january">January</string>
    <string name="month_name_february">February</string>
    <string name="month_name_march">March</string>
    <string name="month_name_april">April</string>
    <string name="month_name_may">May</string>
    <string name="month_name_june">June</string>
    <string name="month_name_july">July</string>
    <string name="month_name_august">August</string>
    <string name="month_name_september">September</string>
    <string name="month_name_october">October</string>
    <string name="month_name_november">November</string>
    <string name="month_name_december">December</string>

    <string name="day_name_monday">Monday</string>
    <string name="day_name_tuesday">Tuesday</string>
    <string name="day_name_wednesday">Wednesday</string>
    <string name="day_name_thursday">Thursday</string>
    <string name="day_name_friday">Friday</string>
    <string name="day_name_saturday">Saturday</string>
    <string name="day_name_sunday">Sunday</string>

    <string name="first_week_name">1st week</string>
    <string name="second_week_name">2nd week</string>
    <string name="third_week_name">3rd week</string>
    <string name="forth_week_name">4th week</string>
    <string name="fifth_week_name">5th week</string>


</resources>