<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.listFragment.ListFragment">

    <TextView
        android:id="@+id/list_title_tv"
        style="@style/BoldText.TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_quintuple"
        android:layout_marginTop="@dimen/default_margin_triple"
        android:text="@string/list_title_list"
        app:layout_constraintBottom_toTopOf="@id/expense_date_tab_rg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/expense_date_tab_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_quadruple"
        android:layout_marginTop="@dimen/default_margin_double"
        android:checkedButton="@+id/all_transactions_rb"
        android:layout_marginBottom="@dimen/default_margin_standard"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_title_tv"
        app:layout_constraintBottom_toTopOf="@id/expense_list_rv">

        <RadioButton
            android:id="@+id/all_transactions_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/RadioButtonTabStyle"
            android:text="@string/all_transactions_title" />

        <RadioButton
            android:id="@+id/this_week_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/RadioButtonTabStyle"
            android:text="@string/this_week_transactions_title" />

        <RadioButton
            android:id="@+id/this_month_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/RadioButtonTabStyle"
            android:text="@string/this_month_transactions_title" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expense_list_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/default_margin_quadruple"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_date_tab_rg"
        tools:listitem="@layout/expense_item_view" />


</androidx.constraintlayout.widget.ConstraintLayout>