<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addFragment.AddFragment">

        <TextView
            android:id="@+id/add_fragment_title_tv"
            style="@style/BoldText.TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_triple"
            android:text="@string/add_fragment_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_name_tf"
            style="@style/RoundedOutlinedbox.TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_quadruple"
            android:layout_marginTop="@dimen/default_margin_quadruple"
            android:hint="@string/expense_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_fragment_title_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expense_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/RegularText.TextInputStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/expense_type_tv"
            style="@style/RegularText.RadioButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_quadruple"
            android:layout_marginTop="@dimen/default_margin_standard"
            android:text="@string/expense_type_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_name_tf" />

        <RadioGroup
            android:id="@+id/expense_type_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_quadruple"
            android:layout_marginTop="@dimen/default_margin_standard"
            android:checkedButton="@+id/radio_button_1"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_type_tv">

            <RadioButton
                android:id="@+id/expense_rb"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/expense_check_text" />

            <RadioButton
                android:id="@+id/income_rb"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/income_check_text" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_quantity_tf"
            style="@style/RoundedOutlinedbox.TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_quadruple"
            android:layout_marginTop="@dimen/default_margin_standard"
            android:hint="@string/expense_quantity_hint"
            app:layout_constraintEnd_toStartOf="@+id/expense_date_tf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_type_rg"
            app:suffixText="€">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expense_quantity_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textAppearance="@style/RegularText.TextInputStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_date_tf"
            style="@style/RoundedOutlinedbox.TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_standard"
            android:layout_marginEnd="@dimen/default_margin_quadruple"
            android:hint="@string/expense_date_hint"
            app:layout_constraintBottom_toBottomOf="@+id/expense_quantity_tf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expense_quantity_tf"
            app:layout_constraintTop_toTopOf="@+id/expense_quantity_tf">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expense_date_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:textAppearance="@style/RegularText.TextInputStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_description_tf"
            style="@style/RoundedOutlinedbox.TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_quadruple"
            android:layout_marginTop="@dimen/default_margin_standard"
            android:hint="@string/expense_description_hint"
            app:counterEnabled="true"
            app:counterMaxLength="300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_quantity_tf">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expense_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textAppearance="@style/RegularText.TextInputStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_category_dropdown_tf"
            style="@style/RoundedOutlinedbox.DropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_quadruple"
            android:layout_marginTop="@dimen/default_margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_description_tf">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expense_category_hint"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_expense_bt"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_triple"
            android:layout_marginTop="@dimen/default_margin_triple"
            android:layout_marginEnd="@dimen/default_margin_triple"
            android:layout_marginBottom="@dimen/default_margin_standard"
            android:text="@string/button_add_text"
            app:icon="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_category_dropdown_tf"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>