<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.homeFragment.HomeFragment">

        <TextView
            android:id="@+id/home_title_tv"
            style="@style/BoldText.TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_triple"
            android:text="@string/home_fragment_title"
            app:layout_constraintBottom_toTopOf="@+id/expense_tab_rg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/expense_tab_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_quadruple"
            android:layout_marginVertical="@dimen/default_margin_double"
            android:checkedButton="@+id/this_year_transactions_rb"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/transaction_home_chart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_title_tv">

            <RadioButton
                android:id="@+id/this_year_transactions_rb"
                style="@style/RadioButtonTabStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/year_transactions_title" />

            <RadioButton
                android:id="@+id/this_month_rb"
                style="@style/RadioButtonTabStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/this_month_transactions_title" />

            <RadioButton
                android:id="@+id/this_week_rb"
                style="@style/RadioButtonTabStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/this_week_transactions_title" />


        </RadioGroup>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/transaction_home_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chart_dimen"
            android:layout_marginHorizontal="@dimen/default_margin_quadruple"
            android:layout_marginTop="@dimen/default_margin_double"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_tab_rg" />

        <include
            android:id="@+id/total_card_resume"
            layout="@layout/view_home_card_resume"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/default_margin_quadruple"
            android:layout_marginVertical="@dimen/default_margin_triple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transaction_home_chart" />

        <include
            android:id="@+id/last_transactions_view"
            layout="@layout/view_last_transactions"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="@dimen/default_margin_quadruple"
            android:layout_marginVertical="@dimen/default_margin_triple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_card_resume" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>