<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/HomeCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/total_resume_title_tv"
            style="@style/BoldText.ResumeCardTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_standard"
            android:text="@string/total_resume_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/total_resume_card_income_iv"
            android:layout_width="@dimen/total_resume_iv_size"
            android:layout_height="@dimen/total_resume_iv_size"
            android:layout_marginStart="@dimen/default_margin_quadruple"
            android:src="@drawable/ic_chart_up"
            app:layout_constraintBottom_toBottomOf="@+id/total_income_resume_title_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_income_resume_title_tv"
            app:tint="@color/alabaster" />

        <TextView
            android:id="@+id/total_income_resume_title_tv"
            style="@style/SemiBoldText.ResumeCardSubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin_double"
            android:layout_marginStart="@dimen/default_margin_standard"
            android:text="@string/income_check_text"
            app:layout_constraintStart_toEndOf="@+id/total_resume_card_income_iv"
            app:layout_constraintTop_toBottomOf="@+id/total_resume_title_tv" />

        <TextView
            android:id="@+id/total_income_amount_resume_title_tv"
            style="@style/SemiBoldText.ResumeCardSubtitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_quadruple"
            android:ellipsize="end"
            app:layout_constraintBaseline_toBaselineOf="@+id/total_income_resume_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline" />

        <ImageView
            android:id="@+id/total_resume_card_expense_iv"
            android:layout_width="@dimen/total_resume_iv_size"
            android:layout_height="@dimen/total_resume_iv_size"
            android:layout_marginStart="@dimen/default_margin_quadruple"
            android:src="@drawable/ic_chart_down"
            app:layout_constraintBottom_toBottomOf="@+id/total_expense_resume_title_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_expense_resume_title_tv"
            app:tint="@color/alabaster" />

        <TextView
            android:id="@+id/total_expense_resume_title_tv"
            style="@style/SemiBoldText.ResumeCardSubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_standard"
            android:layout_marginTop="@dimen/default_margin_double"
            android:text="@string/expense_check_text"
            app:layout_constraintStart_toEndOf="@+id/total_resume_card_expense_iv"
            app:layout_constraintTop_toBottomOf="@+id/total_income_resume_title_tv" />

        <TextView
            android:id="@+id/total_expense_amount_resume_title_tv"
            style="@style/SemiBoldText.ResumeCardSubtitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_quadruple"
            android:ellipsize="end"
            app:layout_constraintBaseline_toBaselineOf="@+id/total_expense_resume_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/resume_card_separator_height"
            android:layout_marginHorizontal="@dimen/default_margin_double"
            android:layout_marginTop="@dimen/default_margin_double"
            android:background="@color/chantilly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_expense_resume_title_tv" />

        <TextView
            android:id="@+id/total_result_resume_title_tv"
            style="@style/SemiBoldText.ResumeCardSubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin_double"
            android:layout_marginStart="@dimen/default_margin_eightfold"
            android:text="@string/total_resume_result_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <TextView
            android:id="@+id/total_result_resume_amount_title_tv"
            style="@style/SemiBoldText.ResumeCardSubtitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin_double"
            android:layout_marginEnd="@dimen/default_margin_quadruple"
            android:ellipsize="end"
            app:layout_constraintBaseline_toBaselineOf="@+id/total_result_resume_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

